--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/mapped-types": "^1.2.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.0",
+    "class-validator": "^0.13.0",
     "joi": "^17.7.0",
     "mysql2": "^2.3.3",
     "reflect-metadata": "^0.1.13",
