sending invoice email completed

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+APP_NAME="Invoicing Application"
+
 NODE_ENV=development
 
 DB_HOST=127.0.0.1
@@ -5,3 +7,17 @@ DB_PORT=3306
 DB_DATABASE=invoicing-app-nestjs
 DB_USERNAME=root
 DB_PASSWORD=
+
+REDIS_HOST=
+REDIS_PORT=
+REDIS_PASSWORD=
+
+MAIL_HOST=127.0.0.1
+MAIL_PORT=1025
+MAIL_USERNAME=null
+MAIL_PASSWORD=null
+MAIL_IGNORE_TLS=true
+MAIL_SECURE=false
+MAIL_FROM_NAME="${APP_NAME}"
+MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_PREVIEW=true
