--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "class-validator": "^0.13.0",
     "handlebars": "^4.7.7",
     "joi": "^17.7.0",
+    "moment": "^2.29.4",
     "mysql2": "^2.3.3",
     "nodemailer": "^6.8.0",
+    "puppeteer": "^19.4.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
