--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "typeorm": "typeorm-ts-node-esm -d ./ormconfig"
+    "typeorm": "typeorm-ts-node-esm -d ./ormconfig",
+    "seed": "ts-node ./node_modules/typeorm-extension/dist/cli/index.js -d ./ormconfig seed"
   },
   "dependencies": {
     "@nestjs-modules/mailer": "^1.8.1",
@@ -30,6 +31,7 @@
     "@nestjs/mapped-types": "^1.2.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
+    "bcrypt": "^5.1.0",
     "bull": "^4.10.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.0",
@@ -42,12 +44,14 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "typeorm": "^0.3.11"
+    "typeorm": "^0.3.11",
+    "typeorm-extension": "^2.4.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/bull": "^4.10.0",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.8",
