password reset completed

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 APP_NAME="Invoicing Application"
 NODE_ENV=development
 APP_KEY=
+APP_FRONTEND_PASSWORD_RESET_URL='http://localhost'
+
 AUTH_EXPIRES_IN=60s
 
 DB_HOST=127.0.0.1
