--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 APP_NAME="Invoicing Application"
 NODE_ENV=development
 APP_KEY=
+APP_FRONTEND_REGISTER_URL='http://localhost'
 APP_FRONTEND_PASSWORD_RESET_URL='http://localhost'
 
 AUTH_EXPIRES_IN=60s
